syntax = "proto3";
option go_package = "./protos/outputs/languageSpecific";

message StaticAssetsOutput{
  // check assets
  bool used = 1;
  // list of all assets
  repeated StaticAsset assets = 2;
}

message StaticAsset{
  //  name of Asset
  string name = 1;
  //  path of Asset
  string path = 2;
  //
  bool hashed=3;

  bool public=4;
}

