syntax = "proto3";
package proto;
option go_package = "code-analyser/protos/pb/plugin";

import "protos/output/languageSpecific/staticAssets.proto";
import "protos/helpers/common.proto";

service StaticAssets {
  rpc Detect(protos.helpers.Input) returns (protos.output.languageSpecific.StaticAssetsOutput);
}

